--- a/TiendaOnline/templates/home.html
+++ b/TiendaOnline/templates/home.html
@@ -38,6 +38,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/js/responsive.bootstrap4.min.js' %}"></script>
   <script src="{% static 'lib/datatables-1.10.20/jquery.dataTables.min.js' %}"></script>
   <script src="{% static 'lib/datatables-1.10.20/jquery.dataTables.min.js' %}"></script> 
+  <script src="{% static 'lib/sweetalert2-9.10.0/sweetalert2.all.min.js' %}"></script> 
+  <script src="{% static 'js/functions.js' %}"></script> 
   </head>
   {% block body %}
   {% endblock %}
